--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4"
   }
 }
